# weather-api-python

./: .gitignore  README.md  pyproject.toml
src/weather_api_python/: __init__.py  weather.py
tests/: test_weather.py
